Crash fix, world time fix, Java 8 support
Skip dimensions that are already registered (#1)
Fix world time setting (#2)
Use Jabel to support Java 8
I'm not giving my vars up